<resources>
    <string name="app_name">CineLaser</string>
    <string name="welcome_to_cinelaser">Welcome to CineLaser</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="continue_as_a_guest">continue as a guest</string>
    <string name="cine_laser">Cine Laser</string>
    <string name="required">Email_Invaled</string>
    <string name="Continue_as_a_guest">Continue as a guest</string>
    <string name="selecione_o_seu_assento_para_o_filme">Selecione o seu assento para o filme</string>
    <string name="concluir_compra">Concluir compra</string>
    <string name="lista_de_filmes">Lista de filmes</string>
    <string name="bem_vindo_ao_cinelaser">Bem vindo ao cinelaser</string>
    <string name="senha">Senha</string>
    <string name="continuar_como_convidado">Continuar como convidado</string>
    <string name="entrar">Entrar</string>
    <string name="compra_concluida">Compra concluida!</string>
</resources>